src/components/GameRecap/style.module.scss
.gameRecap {
  max-height: 96vh;
  display: flex;
  flex-direction: column;
  text-align: center;

  h1 {
    margin-right: 20px;
    margin-top: 0;
  }

  h2 {
    margin-right: 20px;
  }

  .buttonContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 16px;
    margin-right: 20px;
  }

  .gameRecapAnswersBox {
    scrollbar-gutter: stable;
    overflow-x: hidden;
    flex: 1;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    align-items: center;

    .answer {
      width: 420px;
      text-align: center;
      margin: 8px 16px;
      display: flex;
      flex-direction: column;
      padding: 8px 16px;
      border: 1px solid #9bbec8;
      border-radius: 20px;
      background-color: #427d9d;
      margin-bottom: 16px;

      @media screen and (max-width: 470px) {
        width: 280px;
        margin: 4px 8px;
      }

      .border {
        width: calc(
          100% + 32px
        ); /* Considering the padding (16px on each side) */
        height: 1px;
        background-color: #9bbec8;
        margin: 16px -16px; /* To extend outside the padding area */
      }

      div {
        display: flex;
        flex-direction: column;
      }

      p {
        margin: 4px;
      }

      .cardRecapFooter {
        margin-top: 8px;
        display: flex;

        .difficultySecondsContainer {
          display: flex;
          flex-direction: row;
        }
      }

      .correctAnswer {
        color: rgba(9, 207, 9, 0.9);
      }

      .wrongAnswer {
        color: rgb(170, 6, 6);
      }
    }
  }
}

